update to pipeline.yml to change container to webapp001

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: Rezilion/github-action@v2.7.0 
         with:
           mode: 'start'
-          image_name: 'nginx:latest'
+          image_name: 'tomblue01/webapp001:latest'
           command: 'sleep 5'
           
       - uses: Rezilion/github-action@v2.7.0 
         with:
           mode: 'start'
-          image_name: 'nginx:latest'
+          image_name: 'tomblue01/webapp001:latest'
           command: 'echo "Hey"'
       
   Rezilion:
