--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,8 +5,7 @@ jobs:
   test-sanity:
     runs-on: ubuntu-latest
     container:
-      tomblue01/webapp001:latest
-      #image: python:3.7
+      image: python:3.7
     env:
       REZILION_LICENSE_KEY: ${{ secrets.REZILION_LICENSE_KEY }}
  #     REZILION_SEVERITY_GATE: critical
