--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,8 +8,9 @@ jobs:
       image: python:3.7
     env:
       REZILION_LICENSE_KEY: ${{ secrets.REZILION_LICENSE_KEY }}
- #     REZILION_SEVERITY_GATE: critical
+      REZILION_ACCESS_TOKEN: ${{ secrets.REZILION_ACCESS_TOKEN }}
       REZILION_RUN_REMEDIATE: true
+      REZILION_SEVERITY_GATE: "critical"
  
     steps:
       - uses: actions/checkout@v3
@@ -34,7 +35,7 @@ jobs:
     env:
       REZILION_LICENSE_KEY: ${{ secrets.REZILION_LICENSE_KEY }}
       REZILION_ACCESS_TOKEN: ${{ secrets.REZILION_ACCESS_TOKEN }}
-      REZILION_DONT_RUN_REMEDIATE: true
+      REZILION_DONT_RUN_REMEDIATE: false
     steps:
       - uses: actions/checkout@v3
       #- uses: ./.github/actions/Rezilion #example using the private action
